<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivDelete"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivDelete"
        tools:text="Range 1" />

    <ImageView
        android:id="@+id/ivDelete"
        android:padding="4dp"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_delete_file"
        android:textColor="@color/dark_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/edtFrom"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/bg_border_small_all_with_line_gray_light"
        android:hint="@string/from"
        android:inputType="number"
        android:layout_marginTop="6dp"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/primary6"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDelete" />

    <EditText
        android:id="@+id/edtEnd"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:background="@drawable/bg_border_small_all_with_line_gray_light"
        android:hint="@string/to"
        android:inputType="number"
        android:paddingStart="16dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/primary6"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/edtFrom" />

    <TextView
        android:id="@+id/tvInvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_field"
        android:textColor="@color/main_color"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/tvTitle"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>