<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_simple" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/lnGroupApply"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTotalPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Total pages: 0"
                    android:textSize="14sp" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorD1" />

                <TextView
                    android:id="@+id/tvSplitMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/split_method"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvFeature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="14dp"
                    android:background="@drawable/border1"
                    android:paddingVertical="10dp"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@+id/btnSelectFile"
                    app:layout_constraintTop_toBottomOf="@+id/tvFeature"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_split" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutSplit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvSplitCustom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_range" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnAddRangeCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rcvSplitCustom"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border2"
                    android:drawableStart="@drawable/ic_action_add"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/add_range"
                    android:textAllCaps="true"
                    android:textColor="@color/colorD3" />

            </RelativeLayout>

            <LinearLayout
                android:paddingVertical="10dp"
                android:id="@+id/layoutSplit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/split_document_into_equal_page_ranges"
                    android:textSize="14sp" />

                <EditText
                    android:inputType="number"
                    android:id="@+id/edtFixed"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border1"
                    android:hint="@string/ranges"
                    android:paddingStart="16dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/colorD4"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvFileCreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/colorD4"
                    android:textSize="12sp"
                    tools:text="4 PDF files will be created" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutSplit3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvSplitRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_range" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnAddRangeDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rcvSplitRemove"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border2"
                    android:drawableStart="@drawable/ic_action_add"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/add_range"
                    android:textAllCaps="true"
                    android:textColor="@color/colorD3" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/lnGroupApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btnSplit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@drawable/border3"
            android:gravity="center"
            android:minHeight="44dp"
            android:paddingVertical="6dp"
            android:text="@string/split"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btnPreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:background="@drawable/border1"
            android:gravity="center"
            android:minHeight="44dp"
            android:paddingVertical="6dp"
            android:text="@string/preview"
            android:textAllCaps="true"
            android:textSize="14sp" />

    </LinearLayout>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/frContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>